rmeoved relative position, might fix spacing on certain phones

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,7 +139,6 @@ font-size: 65%;
 }
 .svg-area {
     margin: 0 auto;
-    position: relative;
     text-align: center;
 }
 svg {
